<resources>
    <string name="app_name">Pahlawan Indonesia</string>
    <string name="namaApk">Pahlawan Indonesia</string>
    <string name="nama">Nama</string>
    <string name="lanjut">Lanjut</string>
    <string name="nama_x">Halo, %1$s, \nGenerasi Muda Bangsa Indonesia \nSalam patriotik untukmu, Pahlawan Indonesia!</string>
    <string name="nama_invalid">Nama tidak boleh kosong</string>
    <string name="user_name">Masukkan Nama Anda</string>
    <string name="message">%1$s diklik!</string>
    <string name="masuk">Masuk Aplikasi</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="copyright">Pahlawan Indonesia merujuk kepada orang-orang yang telah berperan penting dalam perjuangan kemerdekaan dan pembangunan Indonesia. Pahlawan Indonesia adalah simbol keberanian, dedikasi, dan pengabdian kepada negara.
        \n\nAplikasi ini dibuat dengan bertujuan untuk membantu memperkenalkan pahlawan-pahlawan Indonesia. Aplikasi ini berisikan 10 List nama Pahlawan Indonesia dan mengenalkan asal daerah beserta sejarah dari pahlawan tersebut.
        \n\nAplikasi ini dibuat untuk Assessment 02 Mobpro 1. Temukan kodenya di https://github.com/annisanailiya/Assessment02.git
        \n\nCopyright © 2023 Annisa Nailiya Zahroh \nAll rights reserved.</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="action_switch_layout">Switch Layout</string>
    <string name="bagikan">Bagikan Riwayat</string>
    <string name="bagikan_template">%1$s,
    Mengenal 10 Pahlawan Indonesia : Dr. Ir. Soekarno, Dr. Mohammad Hatta, Sultan Muhammad Hasanuddin, Tjoet Nyak Dhien, Raden Mas Ontowiryo Diponegoro, Ibrahim Datuk Tan Malaka, Raden Mas Soewardi Soerjaningrat, Raden Adjeng Kartini, Teuku Umar, Haji Agus Salim bin Abdullah Al-Malik Al-Husaini</string>
    <string name="switch_layout">Ubah tampilan</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data pahlawan otomatis</string>
    <string name="notif_title">Ada sejarah pahlawan baru!</string>
    <string name="notif_text">Cek sekarang biar nggak penasaran..</string>
</resources>